@@ -18,6 +18,8 @@ export(lipoNN)
 export(plotNN)
 export(prepareZZ)
 export(timeR)
+export(timediff)
+export(timestart)
 export(train_predict_1data)
 export(train_predict_1mth_1data)
 import(R6)
