@@ -5,25 +5,11 @@
 \alias{ht9}
 \title{Concatenates head() and tail() in vector, list, matrix, data.frame, array}
 \usage{
-ht(
-  x,
-  n = 3,
-  m = 4,
-  p = 2,
-  l = 2,
-  names = TRUE,
-  LTT = c("x", "L", "N", "M", "P", "Q", "R", "S", "T")
-)
+ht(x, n = 3, m = 4, p = 2, l = 2, names = TRUE, LTT = c("x", "L",
+  "N", "M", "P", "Q", "R", "S", "T"))
 
-ht9(
-  x,
-  n = 3,
-  m = 9999,
-  p = 2,
-  l = 2,
-  names = TRUE,
-  LTT = c("x", "L", "N", "M", "P", "Q", "R", "S", "T")
-)
+ht9(x, n = 3, m = 9999, p = 2, l = 2, names = TRUE, LTT = c("x",
+  "L", "N", "M", "P", "Q", "R", "S", "T"))
 }
 \arguments{
 \item{x}{vector, matrix, data.frame, array or list.}
@@ -45,7 +31,9 @@ An object of the same class than x but much shorter.
 }
 \description{
 Concatenates \code{head(n)} and \code{tail(n)} rows and subset with m columns. 
-Works also with array, list and matrix in data.frame.
+Works also with array, list and matrix in data.frame. 
+Keeps the data.table format (and add a timezone by default). 
+See the matsindf package for matrix(ces) in tibble.
 }
 \examples{
 
